Made it so images scale correctly vertically and horizontally on smaller screens

--- a/style.css
+++ b/style.css
@@ -125,7 +125,8 @@ hr.gallery-hr {
 
 .gallery-item .thumbnail {
   border: 5px solid #bbb;
-  height: 270px;
+  max-height: 270px;
+  height: auto;
   width: 100%;
   margin-bottom: 5px;
   max-width: 480px;
